Add media queries

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                 </span>
                 <ul class="statusbar-left">
                     <li class="sb-git"><i class="fas fa-code-branch"></i>&nbsp;gh-pages<sup>*</sup><small>+</small></li>
-                    <li class="sb-refresh"><i class="fas fa-sync-alt"></i></li>
+                    <li class="sb-refresh btnRefresh"><i class="fas fa-sync-alt"></i></li>
                     <li class="sb-stats"><i class="fas fa-times-circle"></i>&nbsp;<span class="sb-stats-errors">0</span>&nbsp;<i
                             class="fas fa-exclamation-triangle"></i>&nbsp;<span class="sb-stats-warnings">0</span></li>
                     <li class="sb-action"><i class="fas fa-bolt"></i>&nbsp;Compiling...<span class="sb-action-percent"></span></li>
