--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <div class="info-right">
 
                 <p>
-                    <a class="text-link-mail" href="mailto:mdlsis@gmail.com">
-                        mdlsis<i class="fas fa-at"></i>gmail<sub><span class="dot"></span></sub>com
+                    <a class="text-link-mail" href="mailto:info@mdlsis.com.ar">
+                        info<i class="fas fa-at"></i>mdlsis<sub><span class="dot"></span></sub>com.ar
                     </a>
                 </p>
 
