--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <div class="expand"></div>
                     <div class="code-i2">
                         Email = <span class="string">"info<small><i class="fas fa-at"></i>mdlsis</small><sub><span
-                                    class="dot"></span></sub>com"</span>,
+                                    class="dot"></span></sub>com.ar"</span>,
                     </div>
                 </div>
 
